# paw

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.py  ideas.md  perf-todo.md  rustfmt.toml
data/: lexer.txt  lexer_test.txt  paw.ebnf
data/code/: 2-1.paw  2-2.paw  2-3.paw  3.paw  4.paw  5.paw  6.paw  7.paw  8.paw  base.paw  hello_world.paw  v0_0_1.paw
data/paw/: test.paw
data/snippets/: base.paw  varibles.paw
src/: error.rs  main.cpp  main.rs
src/ast/: ast.cpp  ast.hpp  symbol_table.cpp  symbol_table.hpp
src/ast/nodes/: expr.cpp  expr.hpp  factor.cpp  factor.hpp  program.cpp  program.hpp  stmt.cpp  stmt.hpp  term.cpp  term.hpp
src/eval/: block.rs  decl.rs  expr.rs  file.rs  intrinsic.rs  mod.rs  stmt.rs  value.rs
src/interpreter/: block.rs  builtin.rs  expr.rs  let_decl.rs  mod.rs  scope.rs  stmt.rs
src/lexer/: lexer.cpp  lexer.hpp  lexer.rs  location.cpp  location.hpp  location.rs  mod.rs  token.cpp  token.hpp  token.rs  util.rs
src/parser/: ast.rs  mod.rs
src/parser/ast/: block.rs  decl.rs  expr.rs  file.rs  stmt.rs
src/parser/ast/decl/: func_decl.rs  var_decl.rs
src/parser/ast/stmt/: intrinsic.rs
src/parser/parse_tree/: block.rs  directive.rs  expr.rs  lambda.rs  let_decl.rs  mod.rs  parameter.rs  program.rs  stmt.rs
src/semantics/: file.rs  mod.rs
src/util/: location.rs  mod.rs  string.rs
src/utils/: utils.cpp  utils.hpp
src/utils/operator_logic/: add.cpp  add.hpp  div.cpp  div.hpp  mult.cpp  mult.hpp  sub.cpp  sub.hpp
